# vector-db-external-benchmark

./: README.md  pyproject.toml
tests/: test_chromadb.py  test_redis_integration.py
vector_db_external/vectordb/: chroma.py  redis.py  search_result.py  vectordb_api.py
