[tool.poetry]
name = "vector-db-external"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vector_db_external"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.5.3"
chromadb = "^0.4.22"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
